--- a/frontend/src/components/Home/HomeHeroStyles.css
+++ b/frontend/src/components/Home/HomeHeroStyles.css
@@ -8,6 +8,11 @@
   height: 70vh;
   position: relative;
 }
+.hero-little {
+  width: 100%;
+  height: 50vh;
+  position: relative;
+}
 
 .hero-mid h1 {
   padding-top: 4rem !important;
